[tool.poetry]
name = "06-q-learning"
version = "0.1.0"
description = ""
authors = ["mgarbowski <mikolaj.garbowski@gmail.com>"]
readme = "README.md"
packages = [{include = "06_q_learning"}]

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "^0.29.1"
numpy = "^1.26.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
